--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-GNU SASL AUTHORS -- information about the authors
+GNU SASL AUTHORS -- Information about the authors.
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
