--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -95,7 +95,7 @@ Security Layer framework and a few common SASL mechanisms.  @acronym{SASL} is
 used by network servers (e.g., IMAP, SMTP) to request authentication
 from clients, and in clients to authenticate against servers.
 
-GNU SASL contains of a library (`libgsasl'), a command line utility
+GNU SASL consists of a library (`libgsasl'), a command line utility
 (`gsasl') to access the library from the shell, and a manual.  The
 library includes support for the framework (with authentication
 functions and application data privacy and integrity functions) and at
