--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 * Changes in 0.2.1 (unreleased)
 
+** Fix DIGEST-MD5 application data encode/decode functions.
+
+** API and ABI modifications.
+No changes since last version.
+
 * Changes in 0.2.0 (released 2004-11-07)
 
 ** Important information for 0.0.x or 0.1.x users.
@@ -116,6 +121,9 @@ gsasl_ctx_get: DEPRECATED.  Not useful, application callback now get both
 ** More translations.
 French (by Michel Robitaille), Dutch (by Elros Cyriatan), Polish (by
 Jakub Bogusz), and Romanian (by Laurentiu Buzdugan).
+
+** API and ABI modifications.
+No changes since last version.
 
 * Changes in 0.1.3 (released 2004-08-04)
 
