--- a/lib/NEWS
+++ b/lib/NEWS
@@ -6,6 +6,8 @@ See the end for copying conditions.
 
 ** Fix DIGEST-MD5 application data encode/decode functions.
 
+** Documentation fixes; the old callback API functions are marked as obsolete.
+
 ** API and ABI modifications.
 No changes since last version.
 
