--- a/lib/po/pl.po
+++ b/lib/po/pl.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.1.0\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2004-04-16 21:12+0200\n"
+"POT-Creation-Date: 2004-11-19 02:49+0100\n"
 "PO-Revision-Date: 2004-04-18 00:13+0200\n"
 "Last-Translator: Jakub Bogusz <qboosh@pld-linux.org>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -32,165 +32,320 @@ msgid "SASL mechanism called too many times"
 msgstr "Mechanizm SASL wywo³any zbyt du¿o razy"
 
 #: src/error.c:64
-msgid "SASL function need larger buffer (internal error)"
-msgstr "Funkcja SASL wymaga wiêkszego bufora (b³±d wewnêtrzny)"
-
-#: src/error.c:68
 msgid "Could not open file in SASL library"
 msgstr "Nie mo¿na otworzyæ pliku w bibliotece SASL"
 
-#: src/error.c:72
+#: src/error.c:68
 msgid "Could not close file in SASL library"
 msgstr "Nie mo¿na zamkn±æ pliku w bibliotece SASL"
 
-#: src/error.c:76
+#: src/error.c:72
 msgid "Memory allocation error in SASL library"
 msgstr "B³±d przydzielania pamiêci w bibliotece SASL"
 
-#: src/error.c:80
+#: src/error.c:76
 msgid "Base 64 coding error in SASL library"
 msgstr "B³±d kodowania base64 w bibliotece SASL"
 
-#: src/error.c:84
-msgid "Gcrypt error in SASL library"
+#: src/error.c:80
+#, fuzzy
+msgid "Low-level crypto error in SASL library"
 msgstr "B³±d gcrypt w bibliotece SASL"
 
-#: src/error.c:90
-msgid "GSSAPI library could not deallocate memory in gss_release_buffer() in SASL library.  This is a serious internal error."
-msgstr "Biblioteka GSSAPI nie mog³a zwolniæ pamiêci w gss_release_buffer() w bibliotece SASL. To jest powa¿ny b³±d wewnêtrzny."
+#: src/error.c:86
+msgid ""
+"GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
+"library.  This is a serious internal error."
+msgstr ""
+"Biblioteka GSSAPI nie mog³a zwolniæ pamiêci w gss_release_buffer() w "
+"bibliotece SASL. To jest powa¿ny b³±d wewnêtrzny."
 
-#: src/error.c:98
-msgid "GSSAPI library could not understand a peer name in gss_import_name() in SASL library.  This may be due to incorrect user supplied data."
-msgstr "Biblioteka GSSAPI nie zrozumia³a nazwy partnera w gss_import_name() w bibliotece SASL. Mo¿e byæ to spowodowane b³êdnie podanymi przez u¿ytkownika danymi."
+#: src/error.c:94
+msgid ""
+"GSSAPI library could not understand a peer name in gss_import_name() in SASL "
+"library.  This may be due to incorrect user supplied data."
+msgstr ""
+"Biblioteka GSSAPI nie zrozumia³a nazwy partnera w gss_import_name() w "
+"bibliotece SASL. Mo¿e byæ to spowodowane b³êdnie podanymi przez u¿ytkownika "
+"danymi."
 
-#: src/error.c:106
-msgid "GSSAPI error in client while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "B³±d GSSAPI w kliencie podczas negocjacji kontekstu bezpieczeñstwa w gss_init_sec_context() w bibliotece SASL - najprawdopodobniej spowodowany niewystarczaj±cym uwierzytelnieniem lub z³ymi wp³ywami."
+#: src/error.c:102
+msgid ""
+"GSSAPI error in client while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"B³±d GSSAPI w kliencie podczas negocjacji kontekstu bezpieczeñstwa w "
+"gss_init_sec_context() w bibliotece SASL - najprawdopodobniej spowodowany "
+"niewystarczaj±cym uwierzytelnieniem lub z³ymi wp³ywami."
 
-#: src/error.c:114
-msgid "GSSAPI error in server while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "B³±d GSSAPI w serwerze podczas negocjacji kontekstu bezpieczeñstwa w gss_init_sec_context() w bibliotece SASL - najprawdopodobniej spowodowany niewystarczaj±cym uwierzytelnieniem lub z³ymi wp³ywami."
+#: src/error.c:110
+msgid ""
+"GSSAPI error in server while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"B³±d GSSAPI w serwerze podczas negocjacji kontekstu bezpieczeñstwa w "
+"gss_init_sec_context() w bibliotece SASL - najprawdopodobniej spowodowany "
+"niewystarczaj±cym uwierzytelnieniem lub z³ymi wp³ywami."
 
-#: src/error.c:122
-msgid "GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL library.  This is most likely due to data corruption."
-msgstr "B³±d GSSAPI podczas odszyfrowywania lub odkodowywania danych w gss_unwrap() w bibliotece SASL - najprawdopodobniej spowodowany uszkodzeniem danych."
+#: src/error.c:118
+msgid ""
+"GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
+"library.  This is most likely due to data corruption."
+msgstr ""
+"B³±d GSSAPI podczas odszyfrowywania lub odkodowywania danych w gss_unwrap() "
+"w bibliotece SASL - najprawdopodobniej spowodowany uszkodzeniem danych."
 
-#: src/error.c:130
-msgid "GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
-msgstr "B³±d GSSAPI podczas szyfrowania lub kodowania danych w gss_wrap() w bibliotece SASL."
+#: src/error.c:126
+msgid ""
+"GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
+msgstr ""
+"B³±d GSSAPI podczas szyfrowania lub kodowania danych w gss_wrap() w "
+"bibliotece SASL."
 
-#: src/error.c:137
-msgid "GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  This is most likely due to not having the proper Kerberos key available in /etc/krb5.keytab on the server."
-msgstr "B³±d GSSAPI podczas otrzymywania uwierzytelnienia w gss_acquire_cred() w bibliotece SASL - najprawdopodobniej spowodowany brakiem odpowiedniego klucza Kerberosa w /etc/krb5.keytab na serwerze."
+#: src/error.c:133
+msgid ""
+"GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
+"This is most likely due to not having the proper Kerberos key available in /"
+"etc/krb5.keytab on the server."
+msgstr ""
+"B³±d GSSAPI podczas otrzymywania uwierzytelnienia w gss_acquire_cred() w "
+"bibliotece SASL - najprawdopodobniej spowodowany brakiem odpowiedniego "
+"klucza Kerberosa w /etc/krb5.keytab na serwerze."
 
-#: src/error.c:146
-msgid "GSSAPI error creating a display name denoting the client in gss_display_name() in SASL library.  This is probably because the client suplied bad data."
-msgstr "B³±d GSSAPI podczas tworzenia nazwy oznaczaj±cej klienta w gss_display_name() w bibliotece SASL - prawdopodobnie z powodu b³êdnych danych otrzymanych od klienta."
+#: src/error.c:142
+msgid ""
+"GSSAPI error creating a display name denoting the client in gss_display_name"
+"() in SASL library.  This is probably because the client suplied bad data."
+msgstr ""
+"B³±d GSSAPI podczas tworzenia nazwy oznaczaj±cej klienta w gss_display_name"
+"() w bibliotece SASL - prawdopodobnie z powodu b³êdnych danych otrzymanych "
+"od klienta."
 
-#: src/error.c:154
-msgid "Other entity requested integrity or confidentiality protection in GSSAPI mechanism but this is currently not implemented."
-msgstr "Inna jednostka za¿±da³a zabezpieczenia spójno¶ci lub poufno¶ci w mechanizmie GSSAPI, ale nie jest on aktualnie zaimplementowany."
+#: src/error.c:150
+msgid ""
+"Other entity requested integrity or confidentiality protection in GSSAPI "
+"mechanism but this is currently not implemented."
+msgstr ""
+"Inna jednostka za¿±da³a zabezpieczenia spójno¶ci lub poufno¶ci w mechanizmie "
+"GSSAPI, ale nie jest on aktualnie zaimplementowany."
 
-#: src/error.c:161
-msgid "SASL mechanism needs gsasl_client_callback_anonymous() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_anonymous() (b³±d aplikacji)"
-
-#: src/error.c:168
-msgid "SASL mechanism needs gsasl_client_callback_password() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_password() (b³±d aplikacji)"
-
-#: src/error.c:175
-msgid "SASL mechanism needs gsasl_client_callback_passcode() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_passcode() (b³±d aplikacji)"
-
-#: src/error.c:182
-msgid "SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_pin() (b³±d aplikacji)"
-
-#: src/error.c:189
-msgid "SASL mechanism needs gsasl_client_callback_authorization_id() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_authorization_id() (b³±d aplikacji)"
-
-#: src/error.c:196
-msgid "SASL mechanism needs gsasl_client_callback_authentication_id() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_authentication_id() (b³±d aplikacji)"
-
-#: src/error.c:203
-msgid "SASL mechanism needs gsasl_client_callback_service() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_service() (b³±d aplikacji)"
-
-#: src/error.c:210
-msgid "SASL mechanism needs gsasl_server_callback_validate() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_validate() (b³±d aplikacji)"
-
-#: src/error.c:217
-msgid "SASL mechanism needs gsasl_server_callback_cram_md5() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_cram_md5() (b³±d aplikacji)"
-
-#: src/error.c:224
-msgid "SASL mechanism needs gsasl_server_callback_digest_md5() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_digest_md5() (b³±d aplikacji)"
-
-#: src/error.c:231
-msgid "SASL mechanism needs gsasl_server_callback_anonymous() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_anonymous() (b³±d aplikacji)"
-
-#: src/error.c:238
-msgid "SASL mechanism needs gsasl_server_callback_external() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_external() (b³±d aplikacji)"
-
-#: src/error.c:245
-msgid "SASL mechanism needs gsasl_server_callback_realm() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_realm() (b³±d aplikacji)"
-
-#: src/error.c:252
-msgid "SASL mechanism needs gsasl_server_callback_securid() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_securid() (b³±d aplikacji)"
-
-#: src/error.c:259
-msgid "SASL mechanism needs gsasl_server_callback_service() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_service() (b³±d aplikacji)"
-
-#: src/error.c:266
-msgid "SASL mechanism needs gsasl_server_callback_gssapi() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_gssapi() (b³±d aplikacji)"
-
-#: src/error.c:271
-msgid "SASL mechanism needs gsasl_server_callback_retrieve() callback (application error)"
-msgstr "Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_retrieve() (b³±d aplikacji)"
-
-#: src/error.c:276
+#: src/error.c:155
 msgid "SASL mechanism could not parse input"
 msgstr "Mechanizm SASL nie by³ w stanie przeanalizowaæ wej¶cia"
 
-#: src/error.c:280
+#: src/error.c:159
 msgid "Error authentication user"
 msgstr "B³±d uwierzytelniania u¿ytkownika"
 
-#: src/error.c:284
-msgid "Cannot get internal library handle (library error)"
-msgstr "Nie mo¿na uzyskaæ wewnêtrznego uchwytu biblioteki (b³±d biblioteki)"
-
-#: src/error.c:288
+#: src/error.c:163
 msgid "Integrity error in application payload"
 msgstr "B³±d spójno¶ci w danych aplikacji"
 
-#: src/error.c:292
+#: src/error.c:167
 msgid "No more realms available (non-fatal)"
 msgstr "Nie ma wiêcej dostêpnych dziedzin (niekrytyczne)"
 
-#: src/error.c:296
+#: src/error.c:171
 msgid "Client-side functionality not available in library (application error)"
-msgstr "Funkcjonalno¶æ strony klienta niedostêpna w bibliotece (b³±d aplikacji)"
+msgstr ""
+"Funkcjonalno¶æ strony klienta niedostêpna w bibliotece (b³±d aplikacji)"
 
-#: src/error.c:301
+#: src/error.c:176
 msgid "Server-side functionality not available in library (application error)"
-msgstr "Funkcjonalno¶æ strony serwera niedostêpna w bibliotece (b³±d aplikacji)"
+msgstr ""
+"Funkcjonalno¶æ strony serwera niedostêpna w bibliotece (b³±d aplikacji)"
 
-#: src/error.c:306
+#: src/error.c:181
 msgid "The provided library handle was invalid (application error)"
 msgstr "B³êdny dostarczony uchwyt biblioteki (b³±d aplikacji)"
 
-#: src/error.c:310
+#: src/error.c:185
+msgid "No callback specified by caller (application error)."
+msgstr ""
+
+#: src/error.c:189
+msgid "Authentication failed because the anonymous token was not provided."
+msgstr ""
+
+#: src/error.c:194
+msgid ""
+"Authentication failed because the authentication identity was not provided."
+msgstr ""
+
+#: src/error.c:199
+msgid ""
+"Authentication failed because the authorization identity was not provided."
+msgstr ""
+
+#: src/error.c:204
+msgid "Authentication failed because the password was not provided."
+msgstr ""
+
+#: src/error.c:209
+msgid "Authentication failed because the passcode was not provided."
+msgstr ""
+
+#: src/error.c:214
+msgid "Authentication failed because the pin code was not provided."
+msgstr ""
+
+#: src/error.c:219
+msgid "Authentication failed because the service name was not provided."
+msgstr ""
+
+#: src/error.c:224
+msgid "Authentication failed because the host name was not provided."
+msgstr ""
+
+#: src/error.c:229
+msgid "Failed to perform Unicode Normalization on string."
+msgstr ""
+
+#: src/error.c:234
+msgid "SASL function need larger buffer (internal error)"
+msgstr "Funkcja SASL wymaga wiêkszego bufora (b³±d wewnêtrzny)"
+
+#: src/error.c:238
+msgid "Cannot get internal library handle (library error)"
+msgstr "Nie mo¿na uzyskaæ wewnêtrznego uchwytu biblioteki (b³±d biblioteki)"
+
+#: src/error.c:244
+msgid ""
+"SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_anonymous() "
+"(b³±d aplikacji)"
+
+#: src/error.c:251
+msgid ""
+"SASL mechanism needs gsasl_client_callback_password() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_password() "
+"(b³±d aplikacji)"
+
+#: src/error.c:258
+msgid ""
+"SASL mechanism needs gsasl_client_callback_passcode() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_passcode() "
+"(b³±d aplikacji)"
+
+#: src/error.c:265
+msgid ""
+"SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_pin() (b³±d "
+"aplikacji)"
+
+#: src/error.c:272
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authorization_id() callback "
+"(application error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego "
+"gsasl_client_callback_authorization_id() (b³±d aplikacji)"
+
+#: src/error.c:279
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authentication_id() callback "
+"(application error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego "
+"gsasl_client_callback_authentication_id() (b³±d aplikacji)"
+
+#: src/error.c:286
+msgid ""
+"SASL mechanism needs gsasl_client_callback_service() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_client_callback_service() "
+"(b³±d aplikacji)"
+
+#: src/error.c:293
+msgid ""
+"SASL mechanism needs gsasl_server_callback_validate() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_validate() "
+"(b³±d aplikacji)"
+
+#: src/error.c:300
+msgid ""
+"SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_cram_md5() "
+"(b³±d aplikacji)"
+
+#: src/error.c:307
+msgid ""
+"SASL mechanism needs gsasl_server_callback_digest_md5() callback "
+"(application error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_digest_md5() "
+"(b³±d aplikacji)"
+
+#: src/error.c:314
+msgid ""
+"SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_anonymous() "
+"(b³±d aplikacji)"
+
+#: src/error.c:321
+msgid ""
+"SASL mechanism needs gsasl_server_callback_external() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_external() "
+"(b³±d aplikacji)"
+
+#: src/error.c:328
+msgid ""
+"SASL mechanism needs gsasl_server_callback_realm() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_realm() "
+"(b³±d aplikacji)"
+
+#: src/error.c:335
+msgid ""
+"SASL mechanism needs gsasl_server_callback_securid() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_securid() "
+"(b³±d aplikacji)"
+
+#: src/error.c:342
+msgid ""
+"SASL mechanism needs gsasl_server_callback_service() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_service() "
+"(b³±d aplikacji)"
+
+#: src/error.c:349
+msgid ""
+"SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_gssapi() "
+"(b³±d aplikacji)"
+
+#: src/error.c:354
+msgid ""
+"SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
+"error)"
+msgstr ""
+"Mechanizm SASL wymaga wywo³ania zwrotnego gsasl_server_callback_retrieve() "
+"(b³±d aplikacji)"
+
+#: src/error.c:360
 msgid "Libgsasl unknown error"
 msgstr "Nieznany b³±d libgsasl"
