--- a/NEWS
+++ b/NEWS
@@ -6,13 +6,13 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Changes in 0.2.2 (unreleased)
+* Version 0.2.2 (unreleased)
 
-* Changes in 0.2.1 (released 2004-11-19)
+* Version 0.2.1 (released 2004-11-19)
 
 ** Documentation fixes; the old callback API functions are marked as obsolete.
 
-* Changes in 0.2.0 (released 2004-11-07)
+* Version 0.2.0 (released 2004-11-07)
 
 ** Added new directory examples/ with complete examples for new API.
 
@@ -25,7 +25,7 @@ For example, you can now browse the GNU SASL API manual using DevHelp.
 
 ** Translation fixes.
 
-* Changes in 0.1.4 (released 2004-08-08)
+* Version 0.1.4 (released 2004-08-08)
 
 ** Revamp of gnulib compatibility files.
 
@@ -35,7 +35,7 @@ Michel Robitaille), Irish (by Kevin Patrick Scannell), Dutch (by Elros
 Cyriatan), Polish (by Jakub Bogusz), Romanian (by Laurentiu Buzdugan),
 and Serbian (by Aleksandar Jelenak).
 
-* Changes in 0.1.3 (released 2004-08-04)
+* Version 0.1.3 (released 2004-08-04)
 
 ** Command line tool support IPv6 (and other protocol families).
 Requires that your system has `getaddrinfo'.
@@ -48,7 +48,7 @@ is not specified, the username of the user invoking gsasl is used
 usage, as in `gsasl mail.example.com' to connect, via IMAP, to
 mail.example.com.
 
-* Changes in 0.1.2 (released 2004-07-16)
+* Version 0.1.2 (released 2004-07-16)
 
 ** The SMTP mode in `gsasl' should now work.
 
@@ -60,11 +60,11 @@ platform is uClibc/uClinux on Motorola Coldfire.
 
 ** Passwords read from stdin are not echoed to the terminal.
 
-* Changes in 0.1.1 (released 2004-06-26)
+* Version 0.1.1 (released 2004-06-26)
 
 ** In the command line client, the default quality of protection is now none.
 
-* Changes in 0.1.0 (released 2004-04-16)
+* Version 0.1.0 (released 2004-04-16)
 
 ** The library re-licensed to LGPL and distributed as a separate package.
 This means a fork of this NEWS file, all the entries below relate to
@@ -73,7 +73,7 @@ document user visible changes for the library ("libgsasl"), for that
 see NEWS in the lib/ sub-directory, which is also distributed as a
 stand-alone package.
 
-* Changes in 0.0.14 (released 2004-01-22)
+* Version 0.0.14 (released 2004-01-22)
 
 ** Moved all mechanism specific code into sub-directories of lib/.
 Each backend is built into its own library (e.g., libgsasl-plain.so),
@@ -82,13 +82,13 @@ backends.
 
 ** Moved compatibility files (getopt*) to gl/, and added more (strdup*).
 
-* Changes in 0.0.13 (released 2004-01-17)
+* Version 0.0.13 (released 2004-01-17)
 
 ** Nettle (the crypto functionality, crypto/) has been updated.
 This fixes two portability issues, the new code should work on
 platforms that doesn't have inttypes.h and alloca.
 
-* Changes in 0.0.12 (released 2004-01-15)
+* Version 0.0.12 (released 2004-01-15)
 
 ** Protocol line parser in 'gsasl' tool more reliable.
 Earlier it assumed two lines were sent in one packet in one place, and
@@ -96,7 +96,7 @@ sent as two packets in another place.
 
 ** Various bugfixes.
 
-* Changes in 0.0.11 (released 2004-01-06)
+* Version 0.0.11 (released 2004-01-06)
 
 ** The client part of CRAM-MD5 now uses SASLprep instead of NFKC.
 This aligns with draft-ietf-sasl-crammd5-01.
@@ -113,7 +113,7 @@ future, if I can get the tools to work.
 ** API and ABI modifications.
 GSASL_SASLPREP_ERROR: ADD.
 
-* Changes in 0.0.10 (released 2003-11-22)
+* Version 0.0.10 (released 2003-11-22)
 
 ** The CRAM-MD5 server now reject invalid passwords.
 The logic flaw was introduced in 0.0.9, after blindly making code
@@ -122,7 +122,7 @@ changes to shut up valgrind just before the release.
 ** Various build improvements.
 Pkg-config is no longer needed.  GTK-DOC is only used if present.
 
-* Changes in 0.0.9 (released 2003-11-21)
+* Version 0.0.9 (released 2003-11-21)
 
 ** Command line client can talk to SMTP servers with --smtp.
 
@@ -189,7 +189,7 @@ GSASL_SHISHI_ERROR: DEPRECATED: use GSASL_KERBEROS_V5_INTERNAL_ERROR instead.
 
 GSASL_INVALID_HANDLE: ADD.
 
-* Changes in 0.0.8 (released 2003-10-11)
+* Version 0.0.8 (released 2003-10-11)
 
 ** Improved GSSAPI implementation detection.
 Auto detection should work, unless you have both MIT and Heimdal, or
@@ -238,7 +238,7 @@ gsasl_stringprep_nfkc: NEW.
 gsasl_stringprep_saslprep: NEW.
 gsasl_stringprep_trace: NEW.
 
-* Changes in 0.0.7 (released 2003-06-02)
+* Version 0.0.7 (released 2003-06-02)
 
 ** Two new GSS libraries supported for the GSS-API mechanism.
 See http://josefsson.org/gss/ for GSS, which uses Shishi for Kerberos 5.
@@ -246,7 +246,7 @@ See http://www.pdc.kth.se/heimdal/ for Heimdal (Kerberos 5).
 
 ** Bug fixes.
 
-* Changes in 0.0.6 (released 2003-03-17)
+* Version 0.0.6 (released 2003-03-17)
 
 ** Gettext not included.
 Due to some conflicts between libtool and gettext, if you want i18n on
@@ -267,7 +267,7 @@ User visible aspects includes not building the API Reference Manual
 with GTK-DOC by default, if you want it use configure parameter
 --enable-gtk-doc.
 
-* Changes in 0.0.5 (released 2003-01-27)
+* Version 0.0.5 (released 2003-01-27)
 
 ** Command line application "gsasl" now supports --imap and --connect.
 The --imap parameter makes it use a IMAP-like negotiation on
@@ -290,19 +290,19 @@ reasons.
 
 ** Bug fixes for DIGEST-MD5 and GSSAPI.
 
-* Changes in 0.0.4 (released 2002-12-13)
+* Version 0.0.4 (released 2002-12-13)
 
 ** License changed to GPL.
 
 ** Official GNU project.
 
-* Changes in 0.0.3 (released 2002-12-05)
+* Version 0.0.3 (released 2002-12-05)
 
 ** New gsasl arguments --application-data and --no-client-first.
 
 ** Bug fixes (client sends first, memory leaks, compiler warnings, more).
 
-* Changes in 0.0.2 (released 2002-11-07)
+* Version 0.0.2 (released 2002-11-07)
 
 ** Includes a copy of libstringprep 0.0.2 for Unicode NFKC
 normalization and locale charset to UTF-8 string conversion, and
@@ -321,14 +321,14 @@ GSASL_OK (earlier only on GSASL_NEEDS_MORE).
 
 ** Bug fixes.
 
-* Changes in 0.0.1 (released 2002-10-12)
+* Version 0.0.1 (released 2002-10-12)
 
 ** APIs for integrity and confidentiality protection of application
 payload data.
 
 ** DIGEST-MD5 support for integrity protection.
 
-* Changes in 0.0.0 (released 2002-10-07)
+* Version 0.0.0 (released 2002-10-07)
 
 ** Initial release.
 
