--- a/THANKS
+++ b/THANKS
@@ -20,6 +20,7 @@ Alexey Melnikov
 Darian Lanx
 Dirk Dierckx
 Paul Romero
+Mike Castle
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
