--- a/lib/NEWS
+++ b/lib/NEWS
@@ -8,6 +8,8 @@ See the end for copying conditions.
 
 ** Fix read out of bound error in client-side CRAM-MD5.
 
+** Tighten the base64 decoder, will not accept white space in input.
+
 ** Documentation fixes.
 
 ** API and ABI modifications.
