--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,171 @@
+2004-11-29  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Version 0.2.2.
+
+2004-11-29  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po: Generated.
+
+2004-11-29  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po: Sync with TP.
+
+2004-11-29  Simon Josefsson <simon@josefsson.org>
+
+	* THANKS: Fix.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* securid/client.c: Typo.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* securid/client.c: Simplify.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c, src/obsolete.c: Doc fix.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Fix.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/base64.c: Update.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c: Doc fix.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c: Cosmetic fix.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/base64.c: Update.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c: Use new API.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/base64.c, gl/base64.h: Update.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* src/xstep.c: Simplify.
+
+2004-11-28  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/base64.c, gl/xsize.h, gl/m4/gnulib.m4,
+	gl/m4/xsize.m4, gl/m4/base64.m4: Update.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c, src/obsolete.c, src/property.c: Indent.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/xstep.c: Use new base64 API.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* src/base64.c, src/gsasl-compat.h, src/gsasl.h.in, src/obsolete.c:
+	Use gnulib for base64 support.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* securid/server.c: Fix read out of bounds error.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Fix.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* cram-md5/digest.c: Use challengelen.
+
+2004-11-27  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/base64.c, gl/xsize.h, gl/m4/gnulib.m4,
+	gl/m4/size_max.m4, gl/m4/xsize.m4: Add.
+
+2004-11-26  Simon Josefsson <simon@josefsson.org>
+
+	* gl/base64.c: Fix.
+
+2004-11-26  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac, gl/Makefile.am, gl/base64.c, gl/base64.h,
+	gl/stdbool_.h, gl/m4/gnulib.m4, gl/m4/stdbool.m4: Add base64.
+
+2004-11-26  Simon Josefsson <simon@josefsson.org>
+
+	* THANKS: Simplify.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/pl.po: Update.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po: Try without line numbers.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po: Update.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/LINGUAS, po/ga.po: Add.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po, po/sv.po: Sync
+	with TP.
+
+2004-11-23  Simon Josefsson <simon@josefsson.org>
+
+	* po/Makevars: Fix.
+
+2004-11-20  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.h.in, src/init.c: Doc fix.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* src/error.c, src/suggest.c, src/supportp.c: Doc fix.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* src/callback.c: Fix valgrind warnings.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* cram-md5/server.c: Fix mem leak.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Change headings.
+
+2004-11-19  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac: Bump versions.
+
 2004-11-19  Simon Josefsson <simon@josefsson.org>
 
 	* po/fr.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po, po/sv.po:
