--- a/THANKS
+++ b/THANKS
@@ -21,6 +21,7 @@ Darian Lanx
 Dirk Dierckx
 Paul Romero
 Mike Castle
+Martin Lambers
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
