--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
+* Version 0.2.3 (unreleased)
+
+** LOGIN client now uses authentication identity, not authorization identity,
+** reported by Martin Lambers.
+
 * Version 0.2.2 (released 2004-11-29)
 
 ** Fix memory leak in server-side CRAM-MD5.
